6 files modified, 7 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<nav class="navbar navbar-dark bg-primary">
+  <a class="navbar-brand" href="#">
+    <img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjV_fy6mPnlAhVCzhoKHSCVAQkQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.libertymutualgroup.com%2Fabout-lm%2Fcorporate-information%2Foverview&psig=AOvVaw0RH1EhwAFFon0ElOiPhBkr&ust=1574353094829454" width="200" height="150" alt="logo">
+  </a>
+</nav>
+<app-welcome></app-welcome>
