--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,4 +1,4 @@
-<div id='Welcome Screen' class="jumbotron">
+<div *ngIf='welcomeStatus' class="jumbotron">
 	<h1 class="display-4">Sandbox Application</h1>
 	<p class="lead">Application developed as a test bed for trying elements of Angular & RxJs</p>
 	<hr class="my-4">
