--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark bg-primary">
   <a class="navbar-brand" href="#">
-    <img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwjV_fy6mPnlAhVCzhoKHSCVAQkQjRx6BAgBEAQ&url=https%3A%2F%2Fwww.libertymutualgroup.com%2Fabout-lm%2Fcorporate-information%2Foverview&psig=AOvVaw0RH1EhwAFFon0ElOiPhBkr&ust=1574353094829454" width="200" height="150" alt="logo">
+    <img src="https://www.greatinsurancejobs.com/getasset/e96420a4-2e78-45e6-af79-904c9a6c590f/" width="300" height="150" alt="logo">
   </a>
 </nav>
 <app-welcome></app-welcome>
