--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-dark bg-primary">
   <a class="navbar-brand" href="#">
-    <img src="https://www.greatinsurancejobs.com/getasset/e96420a4-2e78-45e6-af79-904c9a6c590f/" width="300" height="150" alt="logo">
+    <img src="https://westmountinsurance.com/wp-content/uploads/2018/07/PNGPIX-COM-Liberty-Mutual-Insurance-Logo-PNG-Transparent.png" width="350" height="150" alt="logo">
   </a>
+  <div class="navbar-brand"><h2>Brendan's Sandbox</h2></div>
 </nav>
 <app-welcome></app-welcome>
+<app-workshop-list></app-workshop-list>
