--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -3,5 +3,5 @@
 	<p class="lead">Application developed as a test bed for trying elements of Angular & RxJs</p>
 	<hr class="my-4">
 	<p>Based on Bootstrap CSS, Angular 8 & JQuery Libraries</p>
-	<a class="btn btn-primary btn-lg" (onClick)='onClick' role="button">Enter Here!</a>
+	<a class="btn btn-primary btn-lg" (click)='close()' role="button">Lets Get Started!</a>
 </div>
