--- a/src/app/workshop-list/workshop-list.component.html
+++ b/src/app/workshop-list/workshop-list.component.html
@@ -1,10 +1,56 @@
-<table *ngIf="workshops">
+<!-- <table *ngIf="workshops"> -->
+  <table class="table table-striped table-hover table-responsive">
   <thead>
-    <tr></tr>
+    <tr>
+      <td>Col 1</td>
+      <td>Col 2</td>
+      <td>Col 3</td>
+      <td>Col 4</td>
+      <td>Col 5</td>
+    </tr>
   </thead>
   <tbody>
     <tr>
-
+      <td>Col1 Data</td>
+      <td>Col2 Data</td>
+      <td>Col3 Data</td>
+      <td>Col4 Data</td>
+      <td>Col5 Data</td>
+    </tr>
+    <tr>
+      <td>Col1 Data</td>
+      <td>Col2 Data</td>
+      <td>Col3 Data</td>
+      <td>Col4 Data</td>
+      <td>Col5 Data</td>
+    </tr>
+    <tr>
+      <td>Col1 Data</td>
+      <td>Col2 Data</td>
+      <td>Col3 Data</td>
+      <td>Col4 Data</td>
+      <td>Col5 Data</td>
+    </tr>
+    <tr>
+      <td>Col1 Data</td>
+      <td>Col2 Data</td>
+      <td>Col3 Data</td>
+      <td>Col4 Data</td>
+      <td>Col5 Data</td>
+    </tr>
+    <tr class='table-success'>
+      <td>Col1 Data</td>
+      <td>Col2 Data</td>
+      <td>Col3 Data</td>
+      <td>Col4 Data</td>
+      <td>Col5 Data</td>
+    </tr>
+    <tr>
+      <td>Col1 Data</td>
+      <td>Col2 Data</td>
+      <td>Col3 Data</td>
+      <td>Col4 Data</td>
+      <td>Col5 Data</td>
     </tr>
   </tbody>
 </table>
