5 files modified, 1 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-primary">
-  <a class="navbar-brand" href="#">
+  <a class="navbar-brand" routerLink='./welcome'>
     <img src="https://westmountinsurance.com/wp-content/uploads/2018/07/PNGPIX-COM-Liberty-Mutual-Insurance-Logo-PNG-Transparent.png" width="350" height="150" alt="logo">
   </a>
   <div class="navbar-brand"><h2>Brendan's Sandbox</h2></div>
