--- a/src/app/workshop-list/workshop-list.component.html
+++ b/src/app/workshop-list/workshop-list.component.html
@@ -1,5 +1,5 @@
 <!-- <table *ngIf="workshops"> -->
-  <table datatable class="table table-striped table-hover">
+  <table datatable class="row-border table table-striped table-hover">
   <thead>
     <tr>
       <td>Col 1</td>
